--- a/usermanagement/src/main/resources/templates/registration.html
+++ b/usermanagement/src/main/resources/templates/registration.html
@@ -39,7 +39,7 @@
 						to our awesome app!</div>
 				</div>
 
-				<h1>Registration</h1>
+				<h1>User Registration</h1>
 				<form th:action="@{/registration}" th:object="${user}" method="post">
 
 					<p class="error-message" th:if="${#fields.hasGlobalErrors()}"
