--- a/usermanagement/src/main/resources/templates/login.html
+++ b/usermanagement/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
 
-<title>Registration</title>
+<title>User Registration</title>
 </head>
 <body>
 
@@ -34,7 +34,7 @@
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="jumbotron">
-				<h2>Pixogram Login</h2>
+				<h2>Pixogram User Login</h2>
 				<form th:action="@{/login}" method="post">
 					<div th:if="${param.error}">
 						<div class="alert alert-danger">Invalid username or password.</div>
